<resources>

    <string name="app_name">Timer</string>
    <string name="showBtn">Show List of Workout Routines</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_timer">TimerActivity</string>
    <string name="newWorkout">Create New Workout</string>
    <string name="highIntervalhr">Intense Workout</string>
    <string name="lowIntervalhr">Moderate Workout</string>
    <string name="warmuphr">WarmUp Period</string>
    <string name="cycle">Cycles</string>
    <string name="cancelBtn">Cancel</string>
    <string name="workoutName">Workout Name</string>
    <string name="no_workouts">Currently there are no Workouts created</string>
    <string name="menu_delete">Delete this workout?</string>

</resources>